[gd_scene load_steps=26 format=2]

[ext_resource path="res://assets/player/player_walk_unarmed.png" type="Texture" id=1]
[ext_resource path="res://assets/player/player_run_unarmed.png" type="Texture" id=2]
[ext_resource path="res://scripts/Player.gd" type="Script" id=3]
[ext_resource path="res://assets/weapons/pistol_9mm.png" type="Texture" id=4]
[ext_resource path="res://assets/player/player_pistol.png" type="Texture" id=5]
[ext_resource path="res://assets/player/player_rifle.png" type="Texture" id=6]
[ext_resource path="res://assets/weapons/pistol_deagle.png" type="Texture" id=7]
[ext_resource path="res://assets/weapons/smg_mp5.png" type="Texture" id=8]

[sub_resource type="CapsuleShape2D" id=1]
radius = 10.5034
height = 17.4165

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 80, 87 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 80, 0, 80, 87 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 160, 0, 80, 87 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 240, 0, 80, 87 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 2 )
region = Rect2( 320, 0, 80, 87 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 2 )
region = Rect2( 400, 0, 80, 87 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 35, 57 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 35, 0, 35, 57 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 1 )
region = Rect2( 70, 0, 35, 57 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 1 )
region = Rect2( 105, 0, 35, 57 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 1 )
region = Rect2( 140, 0, 35, 57 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 1 )
region = Rect2( 175, 0, 35, 57 )

[sub_resource type="SpriteFrames" id=14]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ) ],
"loop": true,
"name": "player_run_unarmed",
"speed": 12.0
}, {
"frames": [ SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ) ],
"loop": true,
"name": "player_walk_unarmed",
"speed": 8.0
}, {
"frames": [ ExtResource( 6 ) ],
"loop": true,
"name": "player_rifle",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "player_pistol",
"speed": 5.0
} ]

[sub_resource type="OccluderPolygon2D" id=17]
polygon = PoolVector2Array( -1.93374, -12.3739, -7.54166, 2.58051, -1.93374, 15.9327, 10.0832, 2.58051 )

[sub_resource type="SpriteFrames" id=15]
animations = [ {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "pistol_9mm",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ) ],
"loop": true,
"name": "pistol_deagle",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=16]
animations = [ {
"frames": [ ExtResource( 8 ) ],
"loop": true,
"name": "smg_mp5",
"speed": 5.0
} ]

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="PlayerSprite" type="AnimatedSprite" parent="."]
position = Vector2( 1.02479, -2.59928 )
scale = Vector2( 0.937464, 0.937464 )
frames = SubResource( 14 )
animation = "player_walk_unarmed"

[node name="LightOccluder2D" type="LightOccluder2D" parent="PlayerSprite"]
occluder = SubResource( 17 )

[node name="Aim" type="Position2D" parent="."]
position = Vector2( 19.3842, 1.62639 )

[node name="ShootingTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="PistolSprite" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 4.11765, -2.97114 )
frames = SubResource( 15 )
animation = "pistol_9mm"

[node name="RifleSprite" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 0.582279, -3.11939 )
frames = SubResource( 16 )
animation = "smg_mp5"

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 100.252, -0.00163269 )
current = true
zoom = Vector2( 0.7, 0.7 )
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = true
drag_margin_left = 0.0
drag_margin_top = 0.0
drag_margin_right = 0.0
drag_margin_bottom = 0.0
[connection signal="timeout" from="ShootingTimer" to="." method="_on_ShootingTimer_timeout"]
